cmake_minimum_required(VERSION 3.17)
project(Y2_C C)

set(CMAKE_C_STANDARD 99)

include_directories(TP_1)

add_executable(TP_1
        TP_1/main.c
        TP_1/tp1ex1.h
        TP_1/tp1ex2.h
        TP_1/tp1ex3.h
        TP_1/tp1ex5.h
        TP_1/tp1ex6.h
        TP_1/tp1ex7.h
        TP_1/tp1ex8.h
        TP_1/tp1ex9.h
        TP_1/tp1ex10.h
        TP_1/tp1ex11.h
        TP_1/tp1ex12.h)